--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/datasource-rest": "^4.3.2",
     "@apollo/server": "^4.0.0",
     "graphql": "^16.6.0"
   },
